get-started-with-istio-3-steps/02 - istio/greeter-app-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeter-app
spec:
  hosts:
  - greeter-app.default.svc.cluster.local
  http:
  - name: default
    route:
    - destination:
        host: greeter-app.default.svc.cluster.local
