get-started-with-istio-3-steps/02 - istio/httpbin-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - httpbin.default.svc.cluster.local
  http:
  - name: default
    route:
    - destination:
        host: httpbin.default.svc.cluster.local
