get-started-with-istio-3-steps/02 - istio/redis-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: redis
spec:
  host: redis.default.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
