get-started-with-istio-3-steps/02 - istio/redis-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: redis
spec:
  hosts:
  - redis.default.svc.cluster.local
  tcp:
  - route:
    - destination:
        host: redis.default.svc.cluster.local
